# EconomistRadio

./: Dockerfile  README.md  pyproject.toml
config/: radio.ecs.yaml  radio.example.yaml
examples/content/2026-03-17/: elections-roundup.json
examples/content/2026-03-20/: markets-briefing.json
examples/content/archive/: industrial-policy-feature.json
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
radio_agent/: api.py  audio.py  config.py  content.py  engine.py  main.py  models.py  publisher.py  tts.py
radio_agent/static/: player.css  player.js
runtime/output/: live.m3u8
runtime/output/segments/: 20260320142346_bb4c5256924ea927_00328.ts  20260320142346_bb4c5256924ea927_00333.ts  20260320142346_bb4c5256924ea927_00339.ts  20260320142346_bb4c5256924ea927_00341.ts  20260320142346_bb4c5256924ea927_00343.ts  20260320142346_bb4c5256924ea927_00346.ts  20260320142346_bb4c5256924ea927_00348.ts  20260320142346_bb4c5256924ea927_00350.ts  20260320142346_bb4c5256924ea927_00351.ts  20260320142346_bb4c5256924ea927_00352.ts  20260320142346_bb4c5256924ea927_00353.ts  20260320142346_bb4c5256924ea927_00355.ts  20260320142346_bb4c5256924ea927_00357.ts  20260320142346_bb4c5256924ea927_00360.ts  20260320142346_bb4c5256924ea927_00362.ts  (+33 more)
runtime/state/: radio.db
src/radio_agent/: __init__.py  api.py  config.py  content.py  engine.py  main.py  models.py  playlist.py  script_writer.py  selection.py  state.py  timezones.py
tests/: test_api.py  test_content.py  test_script_writer.py  test_selection.py
