[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "economist-radio-agent"
version = "0.1.0"
description = "Continuous radio host service that assembles narrated features into a live audio stream."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/radio_agent"]
